(Bug Fix) Separator on IE6 fix

--- a/src/org/gwt/mosaic/theme/aegean/public/gwt/aegean/mosaic.css
+++ b/src/org/gwt/mosaic/theme/aegean/public/gwt/aegean/mosaic.css
@@ -1283,7 +1283,6 @@ html>body .mosaic-DecoratedBottomTabBar .gwt-TabBarItem-selected .tabBottomRight
 
 .mosaic-FormSeparator div {
 	border: 1px solid #4d4d4d;
-	height: 0px !important;
 }
 
 /*** GWT Incubator SliderBar ***/
